# sosoSimpleConfigurationCmake

./: CMakeLists.txt
app/: CMakeLists.txt  main.cc
configured/: CMakeLists.txt  config.h.in  testfile1.json  testfile2.json
